fixed spacing on live/repo links

--- a/assets/sass/main.scss
+++ b/assets/sass/main.scss
@@ -1294,6 +1294,15 @@
 		}
 	}
 
+/* Links Container */
+
+	.links-container {
+		display: flex;
+		gap: 6em;
+		justify-content: center;
+		margin-top: 0.75em;
+	}
+
 /* Main */
 
 	#main {
